--- a/ayuda.html
+++ b/ayuda.html
@@ -56,8 +56,7 @@
         <div class="contenedor-acordeon">
             <h2>Preguntas frecuentes sobre la pagina</h2>
             <div class="acordeon">
-                <input type="checkbox" name="acordeon" id="btn-acordeon1"
-                    class="btn-acordeon">
+                <input type="checkbox" name="acordeon" id="btn-acordeon1" class="btn-acordeon">
                 <label for="btn-acordeon1">
                     ¿Como funciona Task manager?
                 </label>
@@ -70,39 +69,44 @@
                     <br>
                     <ol>
                         <!--en esta parte nose si poner imagenes o hacer un boton que no haga nada pero sirva como ejemplo -->
-                        <li><p> 1) Para empezar, simplemente presiona el botón
+                        <li>
+                            <p> 1) Para empezar, simplemente presiona el botón
                                 'Crear Tarea'. <br>
-                                <div>
-                                    <img class="img"
-                                    src="./imagenes/imagen2tp_Mesa de trabajo 1.png"
-                                    alt>
-                                </div>
-                                <br>
-                                <!--queria poner mas imagenes pero me falta esa parte de la web que no puedo ver-->
-                                Luego podrás ingresar un título y
-                                una
-                                descripción de la tarea que estás asignando o
-                                que
-                                necesitas realizar.<br>
-                            </p></li>
-                        <li><p> 2) En la sección de usuarios, selecciona el
+                            <div>
+                                <img class="img" src="./imagenes/imagen2tp_Mesa de trabajo 1.png" alt>
+                            </div>
+                            <br>
+                            <!--queria poner mas imagenes pero me falta esa parte de la web que no puedo ver-->
+                            Luego podrás ingresar un título y
+                            una
+                            descripción de la tarea que estás asignando o
+                            que
+                            necesitas realizar.<br>
+                            </p>
+                        </li>
+                        <li>
+                            <p> 2) En la sección de usuarios, selecciona el
                                 nombre
                                 del usuario al que le estás asignando la
-                                tarea</p></li>
-                        <li><p> 3) En la sección de estado, podrás ver el
+                                tarea</p>
+                        </li>
+                        <li>
+                            <p> 3) En la sección de estado, podrás ver el
                                 progreso
                                 de la tarea: si está completada, en proceso o
                                 aún sin asignar en caso de que no hayas
-                                seleccionado a nadie.</p></li>
-                        <li><p>¡Es así de simple! Comienza a organizar tus
+                                seleccionado a nadie.</p>
+                        </li>
+                        <li>
+                            <p>¡Es así de simple! Comienza a organizar tus
                                 tareas de manera eficiente y
-                                colaborativa.</p></li>
+                                colaborativa.</p>
+                        </li>
                     </ol>
                 </div>
             </div>
             <div class="acordeon">
-                <input type="checkbox" name="acordeon" id="btn-acordeon2"
-                    class="btn-acordeon">
+                <input type="checkbox" name="acordeon" id="btn-acordeon2" class="btn-acordeon">
                 <label for="btn-acordeon2">
                     ¿Como comienzo a usar task manager?
                 </label>
@@ -112,11 +116,11 @@
                     <ol>
                         <li>1) Dirígete al menú y selecciona la opción
                             'Login'.</li>
-                            <br>
-                            <div>
-                                <img class="img" src="./imagenes/imagen3tp_Mesa de trabajo 1_Mesa de trabajo 1.png" alt="#">
-                            </div>
-                            
+                        <br>
+                        <div>
+                            <img class="img" src="./imagenes/imagen3tp_Mesa de trabajo 1_Mesa de trabajo 1.png" alt="#">
+                        </div>
+
                         <li>2) En la página de inicio de sesión, haz clic en
                             'Registro'.
                             <br>
@@ -124,12 +128,13 @@
                                 <img class="img" src="./imagenes/imagen4tp_Mesa de trabajo 1.png" alt="#">
                             </div>
                             <br>
-                             Esto te llevará directamente a un
-                            formulario de registro.</li>
-                            <div>
-                                <img class="img" src="./imagenes/imagen5tp_Mesa de trabajo 1.png" alt="">
+                            Esto te llevará directamente a un
+                            formulario de registro.
+                        </li>
+                        <div>
+                            <img class="img" src="./imagenes/imagen5tp_Mesa de trabajo 1.png" alt="">
 
-                            </div>
+                        </div>
                         <li>3) Completa el formulario con tus datos y una vez
                             aceptado, regresa a la sección de login.</li>
                         <li>4) Ingresa tu nombre de usuario y contraseña en los
@@ -141,8 +146,7 @@
                 </div>
             </div>
             <div class="acordeon">
-                <input type="checkbox" name="acordeon" id="btn-acordeon3"
-                    class="btn-acordeon">
+                <input type="checkbox" name="acordeon" id="btn-acordeon3" class="btn-acordeon">
                 <label for="btn-acordeon3">
                     ¿Como puedo contactarme con ustedes?
                 </label>
@@ -164,8 +168,7 @@
                 </div>
             </div>
             <div class="acordeon">
-                <input type="checkbox" name="acordeon" id="btn-acordeon4"
-                    class="btn-acordeon">
+                <input type="checkbox" name="acordeon" id="btn-acordeon4" class="btn-acordeon">
                 <label for="btn-acordeon4">
                     ¿Quienes son ustedes?
                 </label>
