--- a/contacto.html
+++ b/contacto.html
@@ -86,7 +86,12 @@
                         <p class="Text-md-CAC">Curso autoasistido de habilidades blandas.</p>
                         <p class="Text-md-CAC"> Duración: 20 semanas</p>
                     </div>
-
+                    <div class="centrar">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/K5LrSpuZbaE" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <br>
                     <a href="https://inscripcionesagencia.bue.edu.ar/codoacodo/courses" class="boton-cursos-CAC">VER
                         CURSOS</a>
                 </div>
