--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./imagenes/iconos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/iconos/favicon-32x32.png">
 
     <!-- font-awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -15,8 +15,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <!-- Estilos -->
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
+    <!-- Estilos -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/contacto.css">
     <!-- Bootstrap CSS -->
@@ -31,16 +38,16 @@
     <title>Task Manager</title>
 </head>
 
-<body onload="mostrarNombre()">
+<body>
     <header>
         <section>
             <div>
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img src="./imagenes/descarga.png" width="90" height="55">
+                            <img src="./img/descarga.png" width="90" height="55" alt="Logo">
                             <span class="titlePage">Task Manager - TP</span> </a>
-                        <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
+                        <!-- <div class="titlePage" id="menu">Hola <span id="nombre"></span></div> -->
                         <div class=" navbar-toggler-right">
                             <div class="navbar-nav me-2">
                                 <span><a class="nav-link" href="./index.html">Inicio</a></span>
@@ -55,60 +62,78 @@
     </header>
     <main>
         <div class="container-2">
-            <h2>Formulario de Contacto</h2>
-            <br>
-            <form>
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombreContacto" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" required>
-                <!-- <span id="emailOK"></span> -->
-                <br>
-                <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje" rows="4"></textarea>
-                <input type="submit" value="Enviar" onclick="sendMail();">
-            </form>
-        </div>
-        <div>
-            <div class="info-CAC">
-                <img class="logo-cac-contacto" src="imagenes/logo CAC.png">
-                <div class="datos-intro-cac">
-                    <h2 class="title-intro-cac">¿Qué es codo a codo?</h2>
-                    <div class="intro-cursos">
-                        <p class="Text-md-CAC"> Codo a Codo 4.0 es un programa de enseñanza en Programación, destinado a
-                            personas jóvenes y
-                            adultas,
-                            que cuenten con título secundario. Tiene como objetivo brindar herramientas que faciliten la
-                            inserción
-                            laboral en el sector IT, necesarias para mejorar la empleabilidad de las personas.
-                            Modalidad: 2 clases virtuales sincrónicas por semana de una duración de 90 minutos cada una.
-                        </p>
-                        <p class="Text-md-CAC">Curso autoasistido de habilidades blandas.</p>
-                        <p class="Text-md-CAC"> Duración: 20 semanas</p>
-                    </div>
-                    <div class="centrar">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/K5LrSpuZbaE" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-                    </div>
-                    <br>
-                    <a href="https://inscripcionesagencia.bue.edu.ar/codoacodo/courses" class="boton-cursos-CAC">VER
-                        CURSOS</a>
-                </div>
-
+            <div>
+                <h2>Formulario de Contacto</h2>
+                <form>
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombreContacto" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" required>
+                    <label for="select">Motivo del contacto:</label>
+                    <select name="select" id="select" required>
+                        <option value="--">Seleccione</option>
+                        <option value="consulta">Consulta</option>
+                        <option value="reclamo">Reclamo</option>
+                        <option value="sugerencia">Sugerencia</option>
+                    </select>
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" name="mensaje" rows="4" placeholder="Escriba su mensaje" required></textarea>
+                    <label>
+                        <input type="checkbox" class="checkbox" name="check-terms" id="check-terms" required>
+                        He leído y estoy de acuerdo con los <a href="#" id="openTerms">Términos y condiciones</a> de
+                        esta web
+                    </label>
+                    <input type="submit" value="Enviar" onclick="sendMail();">
+                </form>
             </div>
+
+            <div>
+                <h2 class="title-intro-cac">¿Qué es codo a codo?</h2>
+            </div>
+
+            <div class="info-CAC">
+
+                <img class="logo-cac-contacto" src="img/logo CAC.png" alt="">
+
+
+
+                <p class="Text-md-CAC"> Codo a Codo 4.0 es un programa de enseñanza en Programación, destinado a
+                    personas jóvenes y
+                    adultas,
+                    que cuenten con título secundario. Tiene como objetivo brindar herramientas que faciliten la
+                    inserción
+                    laboral en el sector IT, necesarias para mejorar la empleabilidad de las personas.
+                    Modalidad: 2 clases virtuales sincrónicas por semana de una duración de 90 minutos cada una.
+
+                    Curso autoasistido de habilidades blandas.
+                    Duración: 20 semanas
+                </p>
+            </div>
+            <div>
+                <a href="https://inscripcionesagencia.bue.edu.ar/codoacodo/courses" class="boton" target="_blank">VER
+                    CURSOS</a>
+            </div>
+        </div>
+
+
+        </div>
+        <div class="iframeCAC">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/K5LrSpuZbaE" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
         </div>
 
     </main>
     <footer class="footer">
         <a href="./estudiantes.html">Estudiantes</a>
         <a href="./contacto.html">Contáctanos</a>
-        <a href="#">Términos y Condiciones</a>
+        <a href="#" id="openTerms">Términos y Condiciones</a>
     </footer>
     <!-- Datos de Sesion -->
     <script src="./js/sesiones.js"></script>
     <script>
-        
+
         $(window).on('load', function () {
             actualizarEstadoSesion();
         });
@@ -143,13 +168,18 @@
 
         function sendMail() {
             let name = document.getElementById("nombreContacto").value
-            if (!name) {
+            let email = document.getElementById("email").value
+            let message = document.getElementById("mensaje").value
+            let checkTerms = document.getElementById("check-terms").value
+            if (!name || !email || !message || !checkTerms) {
                 alert('Debe completar los datos')
                 return;
             }
-            alert(`Gracias por sus comentarios ${name}, a la brevedad recibira noticias nuestras!`);
+            alert(`Gracias por su contacto ${name}, a la brevedad recibira noticias nuestras!`);
         };
     </script>
+    <!-- Terminos y condiciones -->
+    <script src="./js/terms.js"></script>
 </body>
 
 </html>
