--- a/estudiantes.html
+++ b/estudiantes.html
@@ -1,4 +1,4 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,8 +7,8 @@ c<!DOCTYPE html>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./imagenes/iconos/favicon-32x32.png">
-
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/iconos/favicon-32x32.png">
+    
     <!-- font-awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -25,19 +25,24 @@ c<!DOCTYPE html>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         data-mutate-approach="sync"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <title>Task Manager</title>
 </head>
 
-<body onload="mostrarNombre()">
+<body>
     <header>
         <section>
             <div>
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img src="./imagenes/descarga.png" width="90" height="55">
+                            <img src="./img/descarga.png" width="90" height="55" alt="Logo">
                             <span class="titlePage">Task Manager - TP</span> </a>
-                        <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
+                        <!-- <div class="titlePage" id="menu">Hola <span id="nombre"></span></div> -->
                         <div class=" navbar-toggler-right">
                             <div class="navbar-nav me-2">
                                 <span><a class="nav-link" href="./index.html">Inicio</a></span>
@@ -69,7 +74,7 @@ c<!DOCTYPE html>
     <footer class="footer">
         <a href="./estudiantes.html">Estudiantes</a>
         <a href="./contacto.html">Contáctanos</a>
-        <a href="#">Términos y Condiciones</a>
+        <a href="#" id="openTerms">Términos y Condiciones</a>
     </footer>
 
     <!-- Datos de Sesion -->
@@ -81,6 +86,8 @@ c<!DOCTYPE html>
             actualizarEstadoSesion();
         });
     </script>
+    <!-- Terminos y condiciones -->
+    <script src="./js/terms.js"></script>
 </body>
 
 </html>
