--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="./imagenes/iconos/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/iconos/favicon-32x32.png">
 
     <!-- font-awesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -37,7 +37,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="./index.html">
-                            <img src="./imagenes/descarga.png" width="90" height="55">
+                            <img src="./img/descarga.png" width="90" height="55" alt="Logo">
                             <span class="titlePage">Task Manager - TP</span> </a>
                         <div class="titlePage" id="menu">Hola <span id="nombre"></span></div>
                         <div class=" navbar-toggler-right">
@@ -88,7 +88,7 @@
     <footer class="footer">
         <a href="./estudiantes.html">Estudiantes</a>
         <a href="./contacto.html">Contáctanos</a>
-        <a href="#">Términos y Condiciones</a>
+        <a href="#" id="openTerms">Términos y Condiciones</a>
     </footer>
 
     <!-- Datos de Sesion -->
@@ -163,6 +163,8 @@
             }
         }
     </script>
+    <!-- Terminos y condiciones -->
+    <script src="./js/terms.js"></script>
 
 </body>
 
